# TryBazelBuild

./: README.md
.github/workflows/: main.yml
hello-word/main/: BUILD.bazel
hello-world/: .bazelrc  MODULE.bazel  README.md
hello-world/main/: hello-world.cc
